Use a dedicated sample iCloud container

--- a/ImportedDirectoryMonitoring/Info.plist
+++ b/ImportedDirectoryMonitoring/Info.plist
@@ -24,12 +24,12 @@
 	<true/>
 	<key>NSUbiquitousContainers</key>
 	<dict>
-		<key>iCloud.com.stevemarshall.AnnotateML</key>
+		<key>iCloud.com.stevemarshall.Sample</key>
 		<dict>
 			<key>NSUbiquitousContainerIsDocumentScopePublic</key>
 			<true/>
 			<key>NSUbiquitousContainerName</key>
-			<string>AnnotateML</string>
+			<string>Sample</string>
 			<key>NSUbiquitousContainerSupportedFolderLevels</key>
 			<string>ANY</string>
 		</dict>
