--- a/ImportedDirectoryMonitoring/ImportedDirectoryMonitoring.entitlements
+++ b/ImportedDirectoryMonitoring/ImportedDirectoryMonitoring.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.developer.icloud-container-identifiers</key>
 	<array>
-		<string>iCloud.com.stevemarshall.AnnotateML</string>
+		<string>iCloud.com.stevemarshall.Sample</string>
 	</array>
 	<key>com.apple.developer.icloud-services</key>
 	<array>
@@ -12,7 +12,7 @@
 	</array>
 	<key>com.apple.developer.ubiquity-container-identifiers</key>
 	<array>
-		<string>iCloud.com.stevemarshall.AnnotateML</string>
+		<string>iCloud.com.stevemarshall.Sample</string>
 	</array>
 </dict>
 </plist>
